# compliance-wizard-engine

./: .env.example  .gitattributes  .gitignore  AGENTIC_REFACTOR_PLAN.md  README.md  SESSION_2026-06-22.md  TEAM_SETUP.md  alembic.ini  config.py  docker-compose.yml  llm_client.py  pipeline.py  pyproject.toml  worker.py
adapters/: base.py  eurlex.py  national_stub.py  upload.py
agentic/: __init__.py  audit.py  context.py  graph.py  model.py  nodes.py  observability.py  specialists.py
agents/: extract_agent.py  fetch_agent.py  mapping_agent.py  read_agent.py  segment_text.py  validation_agent.py
config/: catalog.json
data/: certification_body_aliases.json  hs_nomenclature_full.csv  hs_nomenclature_seed.csv  product_attributes.json
db/: enums.py  models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial_schema.py  0002_summary_and_inferred_hs.py
engine/: hs_inference.py  hs_mapper.py  relationship_resolver.py  wizard_matcher.py
eurlex/: __init__.py  fetch.py  rdf.py
schemas/: __init__.py  common.py  extract.py  fetch.py  mapping.py  read.py  validation.py  wizard.py
scripts/: enqueue.py  seed_hs_nomenclature.py  seed_reference_data.py  trace_document.py
tests/: conftest.py  test_agentic_pipeline.py  test_conformity_routes.py  test_extract_agent.py  test_fetch_agent.py  test_hs_inference.py  test_integration.py  test_mapping_agent.py  test_param_types.py  test_read_agent.py  test_resolution_engine.py  test_validation_agent.py
ui/: deps.py  main.py  pagination.py  review_helpers.py
ui/routes/: condition_detail.py  detail.py  hs_review.py  queue.py  regulations.py  relationships.py  wizard.py
ui/static/: style.css
ui/templates/: _pagination.html  base.html  condition_detail.html  detail.html  hs_review.html  queue.html  regulation_detail.html  regulations.html  relationships.html  wizard.html
